# cs2-external

./: .editorconfig  .gitignore  CMakeLists.txt  QWEN.md  Structure.md  build.bat  client_dll.hpp  offsets.json
.kilo/: kilo.json
.kilo/plans/: 1775164053726-sunny-tiger.md  1775165681766-tidy-meadow.md  1775167579146-silent-canyon.md  1775171704381-quiet-lagoon.md  1775229869761-brave-tiger.md
cs2-external-main/: .gitignore  CMakeLists.txt  Structure.md  build.bat
cs2-external-main/.kilo/plans/: 1775161031920-kind-harbor.md  1775171704381-quiet-lagoon.md
cs2-external-main/data/: client_dll.hpp  client_dll.json
cs2-external-main/src/: main.cpp
cs2-external-main/src/config/: config_manager.cpp
cs2-external-main/src/core/application/: app_config.h  app_state.h  application.h
cs2-external-main/src/core/game/: entity_list.h  game_manager.h  game_manager_getters.cpp  local_player.h
cs2-external-main/src/core/math/: math.cpp  math.h
cs2-external-main/src/core/memory/: memory_manager.h  pattern_scanner.h
cs2-external-main/src/core/process/: module.cpp  process.cpp  process.h
cs2-external-main/src/core/sdk/: entity.cpp  entity.h  offset_loader.h  structs.h  updater.h
cs2-external-main/src/features/: feature_manager.cpp  feature_manager.h
cs2-external-main/src/features/aimbot/: aimbot.cpp  aimbot.h
cs2-external-main/src/features/bomb/: bomb.cpp  bomb.h  bomb_config.h
cs2-external-main/src/features/debug_overlay/: debug_overlay.cpp  debug_overlay.h
cs2-external-main/src/features/esp/: esp.cpp  esp.h  esp_config.h
cs2-external-main/src/features/footsteps_esp/: footsteps_esp_ui.h
cs2-external-main/src/features/misc/: misc.h
cs2-external-main/src/features/radar/: radar.h  radar_config.h
cs2-external-main/src/features/rcs/: rcs.h
cs2-external-main/src/features/skinchanger/: skinchanger.cpp  skinchanger_config.h
cs2-external-main/src/features/triggerbot/: triggerbot.cpp
cs2-external-main/src/input/: input_manager.h
cs2-external-main/src/render/draw/: draw_list.h
cs2-external-main/src/render/menu/: menu.cpp  menu.h  menu_theme.h  rewrite.py  tab_legit.h  tab_misc.cpp  tab_misc.h  tab_visuals.cpp  ui_components.cpp  ui_components.h
cs2-external-main/src/render/overlay/: overlay.cpp  overlay.h
cs2-external-main/src/render/renderer/: imgui_manager.h  renderer.cpp  renderer.h
cs2-external-main/src/utils/: logger.cpp  logger.h  math.h  string_utils.h  timer.h
data/: client_dll.hpp
offsets/output/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.rs  animationsystem_dll.zig  buttons.cs  buttons.hpp  buttons.rs  buttons.zig  client_dll.cs  client_dll.hpp  client_dll.rs  client_dll.zig  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  engine2_dll.zig  host_dll.cs  host_dll.hpp  host_dll.rs  host_dll.zig  info.json  interfaces.cs  interfaces.hpp  interfaces.rs  interfaces.zig  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  materialsystem2_dll.zig  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  networksystem_dll.zig  offsets.cs  offsets.hpp  offsets.rs  offsets.zig  panorama_dll.cs  panorama_dll.hpp  (+46 more)
scripts/: mutate_signature.ps1
src/: main.cpp
(+107 files in other folders)
